<resources>
    <string name="app_name">Hidden Backup</string>
    <string name="action_settings">Settings</string>
    <string name="add_backup_dirs">Add dirs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scheduled_backups">Scheduled backups</string>
    <string name="run_backup">Run full backup</string>
    <string name="run_backup_summary">Backups files when a panic action is triggered</string>
    <string name="none">None</string>
    <string name="allowed_trigger_app_summary">Select which app is authorized to send panic alerts</string>
    <string name="allowed_trigger_app">Allowed trigger app</string>
    <string name="runned_notification_content">Your files are safe</string>
    <string name="runned_notification_title">Backup send</string>
    <string name="install_orbot">Install Orbot</string>
    <string name="scan_server_qr">Scan server QR</string>
    <string name="scan_server_qr_summary">Scan server settings from QR</string>
    <string name="forgot_server">Forgot server</string>
    <string name="forgot_server_summary">Forgot server configuration when a panic action is triggered</string>
    <string name="runned_notification">Notify backup</string>
    <string name="runned_notification_summary">Shows a notification after a backup completes</string>
    <string name="panic_category">On Panic Settings</string>
    <string name="server_category">Server Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="grant">Grant</string>
    <string name="enable_scheduler">Enable scheduler</string>
    <string name="enable_instant_backup">Enable instant backup</string>
    <string name="enable_instant_backup_summary">Instant backup new files when are created</string>
    <string name="wait_for_wifi">Wait for Wifi connection</string>
    <string name="wait_for_wifi_summary">Postpones the backup until you have a WiFi connection</string>
    <string name="confirm_dir_deletion">Confirm deletion</string>
    <string name="install_barcode">Install Qr Scanner</string>
    <string name="cookie_to_clipboard">Auth cookie copied to clipboard</string>
    <string name="add_server_failure">Unable to read server configuration</string>
    <string name="save_dir_backup">Setup</string>
    <string name="set_file_observer">Instant backup new files</string>
    <string name="set_for_schedule">Full backup at next schedule</string>
    <string name="run_scheduler_at">Run at</string>
    <string name="next_backup_at">Next backup at</string>
    <string name="instant_backup">Instant backup</string>
    <string name="auth_to_clipboard">Copy auth to clipboard</string>
    <string name="auth_to_clipboard_summary">Copy server auth string to clipboard for setup Orbot</string>
    <string name="force_backup_now">Force run now</string>
    <string name="instant_backup_gprs">Allow over GPRS</string>
    <string name="check_backup_server_status">Ping server</string>
    <string name="check_backup_server_status_summary">Check the backup server connection status</string>
    <string name="instant_backup_gprs_summary">Force backups over GPRS if no WiFi is available</string>
    <string name="please_grant_permissions_for_external_storage">Please grant permissions for external storage</string>
    <string name="server_online">Backup server is ONLINE</string>
    <string name="server_offline">Backup server is OFFLINE</string>
    <string name="ping_send">Ping send....wait....</string>

    <string name="project_url" translatable="false">onpanic.org</string>
    <string name="pref_trigger_app" translatable="false">pref_trigger_app</string>
    <string name="pref_server_onion" translatable="false">pref_server_onion</string>
    <string name="pref_server_auth" translatable="false">pref_server_auth</string>
    <string name="pref_server_port" translatable="false">pref_server_port</string>
    <string name="pref_runned_notification" translatable="false">pref_runned_notification</string>
    <string name="pref_forgot_server" translatable="false">pref_forgot_server</string>
    <string name="pref_run_now" translatable="false">pref_run_now</string>
    <string name="pref_wait_for_wifi" translatable="false">pref_wait_for_wifi</string>
    <string name="pref_scheduler_enabled" translatable="false">pref_scheduler_enabled</string>
    <string name="pref_scheduler_time" translatable="false">pref_scheduler_time</string>
    <string name="pref_instant_backup_enabled" translatable="false">pref_instant_backup_enabled</string>
    <string name="pref_instant_backup_gprs_enabled" translatable="false">pref_instant_backup_gprs_enabled</string>
    <string name="pref_scan_server_qr" translatable="false">pref_scan_server_qr</string>
    <string name="pref_auth_to_clipboard" translatable="false">pref_auth_to_clipboard</string>
    <string name="pref_check_backup_server_status" translatable="false">pref_check_backup_server_status</string>
    <string name="pref_scheduler_delayed" translatable="false">pref_scheduler_delayed</string>
</resources>
