<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_runned_notification"
        android:summary="@string/runned_notification_summary"
        android:title="@string/runned_notification" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_wait_for_wifi"
        android:summary="@string/wait_for_wifi_summary"
        android:title="@string/wait_for_wifi" />

    <PreferenceCategory android:title="@string/server_category">
        <Preference
            android:key="@string/pref_scan_server_qr"
            android:persistent="false"
            android:summary="@string/scan_server_qr_summary"
            android:title="@string/scan_server_qr" />

        <Preference
            android:key="@string/pref_auth_to_clipboard"
            android:persistent="false"
            android:summary="@string/auth_to_clipboard_summary"
            android:title="@string/auth_to_clipboard" />

        <Preference
            android:key="@string/pref_check_backup_server_status"
            android:persistent="false"
            android:summary="@string/check_backup_server_status_summary"
            android:title="@string/check_backup_server_status" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/panic_category">
        <Preference
            android:key="@string/pref_trigger_app"
            android:persistent="false"
            android:summary="@string/allowed_trigger_app_summary"
            android:title="@string/allowed_trigger_app" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_run_now"
            android:summary="@string/run_backup_summary"
            android:title="@string/run_backup" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_forgot_server"
            android:summary="@string/forgot_server_summary"
            android:title="@string/forgot_server" />
    </PreferenceCategory>
</PreferenceScreen>